--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import "variables.scss";
 @import "__header.scss";
 @import "__welcome-screen.scss";
+@import "__about-us.scss";
 body {
   font-family: "Nunito Sans", sans-serif;
 }
