--- a/src/style/style.css
+++ b/src/style/style.css
@@ -117,70 +117,108 @@
 
 content {
   width: 1280px;
-  border: black 1px solid;
-  background-color: antiquewhite;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 1280px;
+  height: -moz-fit-content;
+  height: fit-content;
   margin: 0 auto;
+  color: #14213d;
 }
 content .about-us__header {
-  border: black 1px solid;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 96px 0 16px 0;
 }
 content .about-us__header .about-us__text {
   width: 848px;
   height: 240px;
-  border: black 1px solid;
+}
+content .about-us__header .about-us__text h2 {
+  font-size: 32px;
+  font-weight: 600;
+}
+content .about-us__header .about-us__text p {
+  font-size: 16px;
+  font-weight: 400;
 }
 content .about-us__header .about-us__logo-box {
-  border: black 1px solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 416px;
   height: 240px;
-  background-color: #14213d;
   margin-left: 16px;
+  background-color: #14213d;
 }
 content .about-us__middle {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-content .about-us__middle .about-us__first-box {
-  border: black 1px solid;
-  width: 416px;
+content .about-us__middle div {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  width: 412px;
   height: 240px;
 }
+content .about-us__middle .about-us__stat {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  width: 100%;
+}
+content .about-us__middle .about-us__stat h2 {
+  margin: 32px 16px 12px 32px;
+}
+content .about-us__middle .about-us__stat p {
+  margin: 0 16px 0 32px;
+}
+content .about-us__middle .about-us__icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+content .about-us__middle .about-us__first-box {
+  border: #f2f2f2 2px solid;
+}
 content .about-us__middle .about-us__second-box {
-  border: black 1px solid;
-  width: 416px;
-  height: 240px;
+  border: #f2f2f2 2px solid;
   margin: 0 16px;
 }
 content .about-us__middle .about-us__third-box {
-  border: black 1px solid;
-  width: 416px;
-  height: 240px;
+  border: #f2f2f2 2px solid;
+}
+content .about-us__subtitle {
+  width: 100%;
+  margin: 32px 0 18px;
+}
+content .about-us__subtitle p {
+  margin: 0;
 }
 content .about-us__hr {
   width: 100%;
 }
 content .about-us__hr hr {
-  background-color: red;
+  border: 2px #f2f2f2 solid;
 }
 content .about-us__partners {
-  width: 100%;
-  height: 116px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  border: black 1px solid;
+  width: 100%;
+  height: 116px;
+  font-size: 20px;
+  font-weight: 400;
 }
 content .about-us__partners div {
-  border: black 1px solid;
+  margin: 0 26px;
 }
 
 body {
