--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -46,7 +46,8 @@
   align-items: center;
   //   width: 50%;
   width: 720px;
-  background-image: url(/public/images/welcome-screen.png);
+  // background-image: url(/public/images/welcome-screen.png);
+  background-image: url(/src/images/welcome-screen.png);
 }
 
 .welcome-screen__buttons {
