--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,6 +3,7 @@
 @import "__header.scss";
 @import "__welcome-screen.scss";
 @import "__about-us.scss";
+@import "__how-we-work.scss";
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
