--- a/src/style/style.css
+++ b/src/style/style.css
@@ -221,6 +221,68 @@ content .about-us__partners div {
   margin: 0 26px;
 }
 
+.how-we-work {
+  width: 1440px;
+  height: 900px;
+  border: black 1px solid;
+  background-color: #14213d;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.how-we-work .how-we-work__left-wrapper {
+  width: 600px;
+  border: #ffffff 1px solid;
+  height: 773px;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__left-content {
+  border: #ffffff 1px solid;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__left-content .how-we-work__title h1 {
+  color: #ffffff;
+  font-size: 64px;
+  font-weight: 700;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__left-content .how-we-work__title p {
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__right-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__right-content .how-we-work__text {
+  width: 552px;
+  border: #ffffff 1px solid;
+  margin: 24px;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__right-content .how-we-work__text span {
+  color: #fca311;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__right-content .how-we-work__text h1 {
+  font-size: 40px;
+  color: #ffffff;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__right-content .how-we-work__text p {
+  font-size: 20px;
+  font-weight: 400;
+  color: #ffffff;
+  line-height: 30px;
+}
+.how-we-work .how-we-work__left-wrapper .how-we-work__right-content img {
+  width: 405px;
+  height: 402px;
+  border: #ffffff 1px solid;
+}
+
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
