--- a/src/style/__how-we-work.scss
+++ b/src/style/__how-we-work.scss
@@ -56,8 +56,8 @@
           line-height: 30px;
         }
       }
-      .how-we-work__picture {
-      }
+      //   .how-we-work__picture {
+      //   }
       img {
         width: 405px;
         height: 402px;
