--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,6 +4,8 @@
 @import "__welcome-screen.scss";
 @import "__about-us.scss";
 @import "__how-we-work.scss";
+@import "__services.scss";
+@import "__selected-cases.scss";
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
@@ -17,6 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 // :root {
