--- a/src/style/__selected-cases.scss
+++ b/src/style/__selected-cases.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 1440px;
-  height: 2000px;
+  height: fit-content;
   border: black 1px solid;
 }
 .selected-cases__title {
