--- a/src/style/__services.scss
+++ b/src/style/__services.scss
@@ -1,6 +1,6 @@
 .services {
   width: 1440px;
-  height: 838px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
