--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -6,6 +6,7 @@
 @import "__how-we-work.scss";
 @import "__services.scss";
 @import "__selected-cases.scss";
+@import "__discuss.scss";
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
