--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -2,12 +2,12 @@
   max-width: 1280px;
   width: 100%;
   height: 80px;
-  border: black 1px solid;
   padding: 16px 80px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  border: none;
   .header__wrapper {
     display: flex;
     flex-direction: row;
