--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,6 +7,7 @@
 @import "__services.scss";
 @import "__selected-cases.scss";
 @import "__discuss.scss";
+@import "__footer.scss";
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
