--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -4,3 +4,6 @@ $orange: #fca311;
 $secondary: #14213d;
 $gray: #b3b3b3;
 $gray-light: #f2f2f2;
+$dark-grey: #3e3e3e;
+$grey-form: #f7f7f7;
+$footer-grey: #cccccc;
