--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,12 +3,12 @@
   max-width: 1280px;
   width: 100%;
   height: 80px;
-  border: black 1px solid;
   padding: 16px 80px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  border: none;
 }
 .header .header__wrapper {
   display: flex;
@@ -50,6 +50,7 @@
   background: linear-gradient(103.2deg, #14213d 0%, #28427b 111.47%);
   display: flex;
   flex-direction: row;
+  border: none;
 }
 
 .welcome-screen__left-box {
@@ -112,7 +113,7 @@
 .about-us {
   width: 1440px;
   height: 877px;
-  border: black 1px solid;
+  border: none;
 }
 
 content {
@@ -224,12 +225,12 @@ content .about-us__partners div {
 .how-we-work {
   width: 1440px;
   height: 900px;
-  border: black 1px solid;
   background-color: #14213d;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  border: none;
 }
 .how-we-work .how-we-work__left-wrapper {
   width: 600px;
@@ -283,6 +284,466 @@ content .about-us__partners div {
   border: #ffffff 1px solid;
 }
 
+.services {
+  width: 1440px;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.services__title {
+  width: 1232px;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-top: 120px;
+  margin-bottom: 48px;
+}
+.services__title h2 {
+  margin: 0;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.services__content {
+  display: grid;
+  grid-template-columns: 632px 632px;
+  grid-column-gap: 16px;
+  grid-template-rows: 300px 300px;
+  grid-row-gap: 32px;
+  justify-content: center;
+}
+
+.services__content_block {
+  display: flex;
+  flex-direction: row;
+}
+.services__content_block .services__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 408px;
+}
+.services__content_block .services__description .services__wrapper {
+  width: 344px;
+  margin-top: 32px;
+}
+.services__content_block .services__description .services__wrapper h2 {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 38px;
+}
+.services__content_block .services__description .services__wrapper p {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.services__content_block .services__description .services__button button {
+  width: 344px;
+  height: 38px;
+  margin-bottom: 32px;
+  background-color: #ffffff;
+  border: 1px solid #b3b3b3;
+  color: #14213d;
+  font-size: 14px;
+  font-weight: 600;
+}
+.services__content_block .services__img {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  width: 224px;
+}
+.services__content_block .services__img img {
+  width: 208px;
+  height: 300px;
+}
+
+.first_content_block {
+  background-color: #14213d;
+  color: #ffffff;
+}
+.first_content_block button {
+  background-color: #fca311 !important;
+  color: #ffffff !important;
+  border: none !important;
+}
+
+.selected-cases {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1440px;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.selected-cases__title {
+  width: 1232px;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-top: 120px;
+  margin-bottom: 48px;
+}
+.selected-cases__title h2 {
+  margin: 0;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.selected-cases__content {
+  display: flex;
+  flex-direction: column;
+  width: 1280px;
+  height: auto;
+}
+.selected-cases__content .selected-cases__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: auto;
+  margin: 24px;
+}
+.selected-cases__content .selected-cases__wrapper .selected-cases__text h2 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 38px;
+  color: #ffffff;
+  margin: 0;
+}
+.selected-cases__content .selected-cases__wrapper .selected-cases__text p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #ffffff;
+  margin: 0;
+  margin-top: 16px;
+  line-height: 24px;
+}
+.selected-cases__content .selected-cases__wrapper .selected-cases__logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+.selected-cases__content .selected-cases__top_content {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__left {
+  width: 632px;
+  height: 600px;
+  background: url(/src/images/am-img.png);
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__left .selected-cases__am-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__left .selected-cases__am-block .selected-cases__wrapper {
+  height: 100%;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__left .selected-cases__am-block .selected-cases__wrapper p {
+  width: 524px;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 632px;
+  height: 600px;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__right .selected-cases__rzd_block {
+  display: flex;
+  flex-direction: row;
+  height: 292px;
+  background-color: #f2f2f2;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__right .selected-cases__rzd_block .selected-cases__rzd-img {
+  width: 530px;
+  background: url(/src/images/rzd-img.png);
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__right .selected-cases__rzd_block .selected-cases__wrapper h2 {
+  color: #14213d;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__right .selected-cases__rzd_block .selected-cases__wrapper p {
+  color: #14213d;
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__right .selected-cases__declarant_block {
+  width: 100%;
+  background-color: beige;
+  height: 292px;
+  background: url(/src/images/declarant-img.png);
+}
+.selected-cases__content .selected-cases__top_content .selected-cases__top_content__right .selected-cases__declarant_block .selected-cases__wrapper {
+  height: 87%;
+}
+.selected-cases__content .selected-cases__bottom_content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 16px;
+}
+.selected-cases__content .selected-cases__bottom_content .selected-cases__ice-palace {
+  width: 416px;
+  height: 424px;
+  background: url(/src/images/ica-palace-img.png);
+}
+.selected-cases__content .selected-cases__bottom_content .selected-cases__cryptonator {
+  width: 416px;
+  height: 424px;
+  background: url(/src/images/cryptonator-img.png);
+}
+.selected-cases__content .selected-cases__bottom_content .selected-cases__add {
+  width: 416px;
+  height: 424px;
+  background-color: #14213d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.selected-cases__content .selected-cases__bottom_content .selected-cases__add .selected-cases__add-wrapper {
+  width: 272px;
+  height: 124px;
+  text-align: center;
+}
+.selected-cases__content .selected-cases__bottom_content .selected-cases__add .selected-cases__add-wrapper h3 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+.discuss {
+  width: 1440px;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.discuss .discuss__wrapper {
+  width: 1280px;
+  height: 668px;
+  margin: 96px auto;
+  display: flex;
+  flex-direction: row;
+}
+.discuss .discuss__wrapper .discuss__left-box {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.discuss .discuss__wrapper .discuss__left-box .discuss__text {
+  width: 524px;
+}
+.discuss .discuss__wrapper .discuss__left-box .discuss__text h2 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 38px;
+  margin-top: 0;
+}
+.discuss .discuss__wrapper .discuss__left-box .discuss__text h3 {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.discuss .discuss__wrapper .discuss__left-box .discuss__img {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.discuss .discuss__wrapper .discuss__right-box {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f7f7;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content {
+  width: 584px;
+  height: 560px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_title h3 {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: left;
+  color: #3e3e3e;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_input {
+  margin-top: 3px;
+  width: 284px;
+  height: 48px;
+  border-radius: 0px;
+  border: 1px #b3b3b3 solid;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_top p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_top input {
+  width: 260px;
+  height: 24px;
+  border-radius: 0px;
+  border: none;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_top .discuss__form_left {
+  width: 284px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_top .discuss__form_right {
+  width: 284px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_middle {
+  margin-top: 16px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_middle p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #14213d;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_middle .discuss__form_input {
+  width: 100%;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_middle input {
+  width: 560px;
+  height: 50%;
+  border-radius: 0px;
+  border: none;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_bottom {
+  margin-top: 16px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_bottom p {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #14213d;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_bottom .discuss__form_input {
+  width: 100%;
+  height: 174px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_bottom textarea {
+  width: 560px;
+  height: 150px;
+  border: none;
+  resize: none;
+  color: #b3b3b3;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_add {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 38px;
+  margin-top: 16px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_add p {
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 14px;
+  font-weight: 600;
+  margin-right: 8px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_add img {
+  width: 20px;
+  height: 20px;
+  margin-top: 0;
+  filter: invert(100%);
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_button {
+  width: 100%;
+  margin-top: 20px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__content .discuss__form_button button {
+  width: 100%;
+  height: 48px;
+  background-color: #fca311;
+  border: none;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__policy {
+  width: 584px;
+  height: 36px;
+  margin-top: 24px;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__policy p {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  margin-top: 0;
+}
+.discuss .discuss__wrapper .discuss__right-box .discuss__policy p a {
+  color: #fca311;
+  text-decoration: none;
+}
+
+.footer {
+  width: 1440px;
+  height: 235px;
+  background-color: #14213d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer .footer__wrapper {
+  width: 1280px;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: 50px 80px;
+}
+.footer .footer__wrapper .footer__email h2 {
+  margin: 0;
+  color: #ffffff;
+  font-size: 32px;
+  line-height: 38px;
+}
+.footer .footer__wrapper .footer__bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 47px;
+}
+.footer .footer__wrapper .footer__bottom .footer__info p {
+  color: #cccccc;
+}
+.footer .footer__wrapper .footer__bottom .footer__year p {
+  color: #cccccc;
+  font-size: 24px;
+}
+
 body {
   font-family: "Nunito Sans", sans-serif;
   margin: 0;
@@ -297,4 +758,5 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Nunito Sans", sans-serif;
 }/*# sourceMappingURL=style.css.map */
