--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -31,14 +31,14 @@
     .header__brand {
       width: 130px;
     }
-    .header__about-us {
-    }
-    .header__working {
-    }
-    .header__services {
-    }
-    .header__favourites {
-    }
+    // .header__about-us {
+    // }
+    // .header__working {
+    // }
+    // .header__services {
+    // }
+    // .header__favourites {
+    // }
   }
   .header__button {
     button {
