--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -43,10 +43,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  //   width: 50%;
   width: 720px;
-  // background-image: url(/public/images/welcome-screen.png);
-  background-image: url(/src/images/welcome-screen.png);
+  background-image: url(../images/welcome-screen.png);
 }
 
 .welcome-screen__buttons {
