--- a/src/style/__selected-cases.scss
+++ b/src/style/__selected-cases.scss
@@ -64,7 +64,8 @@
     .selected-cases__top_content__left {
       width: 632px;
       height: 600px;
-      background: url(/src/images/am-img.png);
+
+      background-image: url(../images/am-img.png);
 
       .selected-cases__am-block {
         display: flex;
@@ -95,7 +96,8 @@
 
         .selected-cases__rzd-img {
           width: 530px;
-          background: url(/src/images/rzd-img.png);
+
+          background-image: url(../images/rzd-img.png);
         }
         .selected-cases__wrapper {
           h2 {
@@ -110,7 +112,8 @@
         width: 100%;
         background-color: beige;
         height: 292px;
-        background: url(/src/images/declarant-img.png);
+
+        background-image: url(../images/declarant-img.png);
         .selected-cases__wrapper {
           height: 87%;
         }
@@ -125,12 +128,14 @@
     .selected-cases__ice-palace {
       width: 416px;
       height: 424px;
-      background: url(/src/images/ica-palace-img.png);
+
+      background-image: url(../images/ice-palace-img.png);
     }
     .selected-cases__cryptonator {
       width: 416px;
       height: 424px;
-      background: url(/src/images/cryptonator-img.png);
+
+      background-image: url(../images/cryptonator-img.png);
     }
     .selected-cases__add {
       width: 416px;
