--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -26,7 +26,7 @@
 
       &:hover {
         border-bottom: solid 3px $orange;
-        margin-top: -3px;
+        margin-bottom: -3px;
       }
     }
 
