--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,7 +14,7 @@ body {
 }
 #app {
   max-width: 1440px;
-  width: 100vw;
+  // width: 100vw;
   height: 100vh;
   background-color: $white;
   margin: 0 auto;
