--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,6 +2,8 @@ $color-blue: rgb(55, 85, 85);
 $white: #ffffff;
 $orange: #fca311;
 $secondary: #14213d;
+$secondary-light: #1c2e54;
+
 $gray: #b3b3b3;
 $gray-light: #f2f2f2;
 $dark-grey: #3e3e3e;
