--- a/src/style/__about-us.scss
+++ b/src/style/__about-us.scss
@@ -2,10 +2,11 @@
   width: 1440px;
   height: 877px;
   border: none;
-  // display: none;
+  display: none;
   border: black 1px solid;
   @media (max-width: 1439px) {
     width: 1280px;
+    margin: 0 auto;
   }
 }
 content {
@@ -17,16 +18,27 @@ content {
   height: fit-content;
   margin: 0 auto;
   color: $secondary;
+  @media (max-width: 1439px) {
+    //width: 90%;
+    width: 90vw;
+  }
 
   .about-us__header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin: 96px 0 16px 0;
+    @media (max-width: 1439px) {
+      width: 100%;
+      // margin-top: 96px;
+    }
 
     .about-us__text {
       width: 848px;
       height: 240px;
+      @media (max-width: 1439px) {
+        //  width: auto;
+      }
       h2 {
         font-size: 32px;
         font-weight: 600;
@@ -46,12 +58,19 @@ content {
       height: 240px;
       margin-left: 16px;
       background-color: $secondary;
+      @media (max-width: 1439px) {
+        width: 50%;
+      }
     }
   }
   .about-us__middle {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    @media (max-width: 1439px) {
+      width: 100%;
+      justify-content: space-between;
+    }
     div {
       display: flex;
       flex-direction: column;
@@ -76,16 +95,28 @@ content {
       display: flex;
       flex-direction: row;
       justify-content: end;
+      @media (max-width: 1439px) {
+        width: 100%;
+      }
     }
     .about-us__first-box {
       border: $gray-light 2px solid;
+      @media (max-width: 1439px) {
+        width: 30%;
+      }
     }
     .about-us__second-box {
       border: $gray-light 2px solid;
       margin: 0 16px;
+      @media (max-width: 1439px) {
+        width: 30%;
+      }
     }
     .about-us__third-box {
       border: $gray-light 2px solid;
+      @media (max-width: 1439px) {
+        width: 30%;
+      }
     }
   }
   .about-us__subtitle {
