--- a/src/style/__header.scss
+++ b/src/style/__header.scss
@@ -9,9 +9,12 @@
   padding: 16px 80px;
   border: none;
   // background-color: aqua;
+  //display: none;
   @media (max-width: 1439px) {
     background-color: aquamarine;
-    width: 1100px;
+    // width: 1100px;
+    width: 90vw;
+    margin: 0 auto;
   }
   .header__wrapper {
     display: flex;
