--- a/src/style/__welcome-screen.scss
+++ b/src/style/__welcome-screen.scss
@@ -5,9 +5,11 @@
   height: 700px;
   background: linear-gradient(103.2deg, #14213d 0%, #28427b 111.47%);
   border: none;
-  // display: none;
+  //  display: none;
   @media (max-width: 1439px) {
-    width: 1280px;
+    //width: 100%;
+    width: 100vw;
+    // width: 1000px;
   }
 }
 
@@ -18,6 +20,11 @@
   align-items: center;
   width: 720px;
   color: $white;
+  @media (max-width: 1439px) {
+    width: 50%;
+    // width: 100vw;
+    // width: 1000px;
+  }
 
   .welcome-screen__info {
     flex-direction: column;
@@ -25,6 +32,11 @@
     width: 456px;
     height: 234px;
     margin-left: 150px;
+  }
+  @media (max-width: 1439px) {
+    width: 50%;
+    // width: 100vw;
+    // width: 1000px;
   }
   .welcome-screen__title {
     h1 {
@@ -50,6 +62,11 @@
   align-items: center;
   width: 720px;
   background-image: url(../images/welcome-screen.png);
+  @media (max-width: 1439px) {
+    width: 50%;
+    // width: 100vw;
+    // width: 1000px;
+  }
 }
 
 .welcome-screen__buttons {
